kubernetes/paperless-ngx/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-redis
  template:
    metadata:
      labels:
        app: paperless-redis
    spec:
      containers:
        - name: redis
          image: redis:8
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: paperless-ngx
spec:
  selector:
    app: paperless-redis
  ports:
    - port: 6379
      targetPort: 6379
