kubernetes/paperless-ngx/paperless-ai.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ai
  namespace: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ai
  template:
    metadata:
      labels:
        app: paperless-ai
    spec:
      containers:
        - name: paperless
          image: clusterzx/paperless-ai:3.0.9
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /app/data
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-ai-data
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ai
  namespace: paperless-ngx
spec:
  selector:
    app: paperless-ai
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ai
  namespace: paperless-ngx
  annotations:
    "kubernetes.io/ingress.class": traefik
    "traefik.ingress.kubernetes.io/router.tls": "true"
    "external-dns.alpha.kubernetes.io/hostname": paperai.saturn.ong
    "external-dns.alpha.kubernetes.io/target": direct.saturn.ong
spec:
  tls:
    - secretName: paperai.saturn.ong-tls
  rules:
    - host: "paperai.saturn.ong"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: paperless-ai
                port:
                  number: 3000
    - host: "paperai.internal"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: paperless-ai
                port:
                  number: 3000
