kubernetes/paperless-ngx/paperless.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ngx
  template:
    metadata:
      labels:
        app: paperless-ngx
    spec:
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:2.20.10
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
            - name: consume
              mountPath: /usr/src/paperless/consume
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: consume
          persistentVolumeClaim:
            claimName: consume
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  selector:
    app: paperless-ngx
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  annotations:
    "kubernetes.io/ingress.class": traefik
    "traefik.ingress.kubernetes.io/router.tls": "true"
    "external-dns.alpha.kubernetes.io/hostname": paperless.saturn.ong
    "external-dns.alpha.kubernetes.io/target": direct.saturn.ong
spec:
  tls:
    - secretName: paperless.saturn.ong-tls
  rules:
    - host: "paperless.saturn.ong"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: paperless-ngx
                port:
                  number: 8000
    - host: "paperless.internal"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: paperless-ngx
                port:
                  number: 8000
